# VMDL

./: Cargo.toml  README.md
examples/: config.vmdl
src/js/: example.js  index.js  package.json  parser.js
src/rust/: lib.rs  main.rs
